<resources>
    <string name="app_name">VaultApp</string>
    <string name="currency_activity_title">Currency</string>
    <string name="ticker_size_text">All items:</string>
    <string name="no_internet_connect_error_message">Проверьте подключение к интернету</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_code">Enter your code</string>
    <string name="enter_new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_received_code">Enter received code</string>
    <string name="error_text">something went wrong</string>
    <string name="unauthorized_text">find code by user: Not found</string>
    <string name="send_code_text">We just sent a six-digit code to your mail.
     \nEnter the code you received.</string>
    <string name="send_otp_text">Enter the 6 digit code generated by your authenticator app..</string>
    <string name="otp_text">DON\'T KNOW THE CODE?</string>
    <string name="send_code_text_to_phone_number">We  sent a code to your phone number.
     \nEnter the code you received.</string>
    <string name="confirm">Confirm</string>
    <string name="google">GOOGLE</string>
    <string name="github">GITHUB</string>
    <string name="resent_code">DIDN\'T GET THE CODE?</string>
    <string name="code_sended">the code has been sent to your email</string>
    <string name="disable_otp">the code has been sent to your email</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="home_toolbar_title">Documents</string>
    <string name="requested_documents_toolbar_title">Requested information</string>
    <string name="error_no_internet">Нет доступа к интернету</string>
    <string name="tab_login_1">LOGIN</string>
    <string name="tab_login_2">SIGN UP</string>
    <string name="pass_dont_match">passwords don\'t match</string>
    <string name="already_has_user_error">The user is already registered under this login</string>
    <string name="dont_have_account">You don\'t have an Endpass account</string>
    <string name="change_password">Change password</string>
    <string name="forgot_your_password">FORGOT YOUR PASSWORD?</string>
    <string name="does_not_have_verified_phones_text">user does not have verified phones</string>
    <string name="disable_otp_text">Disable OTP setting via SMS</string>
    <string name="verify_email">Verify email</string>
    <string name="no_document_uploaded_yet">No document uploaded yet</string>
    <string name="upload_action_desc_text">But you can upload them  \nby clicking the button below</string>
    <string name="re_upload_document_text">Re-upload document</string>
    <string name="close_camera_text">Close</string>
    <string name="back_side_of_document_uploaded_yet">Back side of document uploaded yet</string>
    <string name="make_photo_placeholder_text">Make sure that all the data on the photo is clearly visible</string>
    <string name="uploading">Uploading</string>
    <string name="_40_percent_text">10%</string>
    <string name="checking">Check</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="upload_a_document_text">Upload a document</string>
    <string name="cancle_action_text">cancel</string>
    <string name="submit_text">submit</string>
    <string name="retake_text">Retake</string>
    <string name="proccess_being_text">Please do not close the app, your documents are being processed.</string>
    <string name="access_info_text">This application is requesting access to the following information from you. Please press "Allow"  to give permission and proceed.</string>
    <string name="congratulations_text">Congratulations!</string>
    <string name="verified_text">All your documents have been successfully verified, you may continue.</string>
    <string name="please_come_back_later">Please, come back later</string>
    <string name="wait_status_text">Some of documents still in pending status.</string>
    <string name="pending_text">Pending</string>
    <string name="main_action_crop">Crop</string>
    <string name="review_permissions">Review Permissions</string>
    <string name="allow">ALLOW</string>
    <string name="verified_success_text">All your documents have been successfully verified, you may continue.</string>
    <string name="select_document">SELECT DOCUMENT</string>
    <string name="upload_new_document">UPLOAD NEW DOCUMENT</string>
    <string name="reupload_text">REUPLOAD</string>
    <string name="hide_text">HIDE</string>


</resources>
