<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">


    <endpass.android.endpass_sdk.presentation.custom.ValutInputField
        android:id="@+id/loginInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_android_margin"
        app:hint="@string/enter_your_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <endpass.android.endpass_sdk.presentation.custom.ValutInputField
        android:id="@+id/newPassInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_android_margin"
        app:hint="@string/enter_new_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginInputLayout" />


    <endpass.android.endpass_sdk.presentation.custom.ValutInputField
        android:id="@+id/confirmPassInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_android_margin"
        app:hint="@string/confirm_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPassInputLayout" />


    <endpass.android.endpass_sdk.presentation.custom.ValutInputField
        android:id="@+id/receivedInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_android_margin"
        android:visibility="gone"
        app:hint="@string/enter_received_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassInputLayout" />


    <net.cachapa.expandablelayout.ExpandableLayout
        android:id="@+id/expandableView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:el_duration="300"
        app:el_expanded="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/receivedInputLayout">


        <FrameLayout
            android:id="@+id/verify_frame_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />


    </net.cachapa.expandablelayout.ExpandableLayout>


    <endpass.android.endpass_sdk.presentation.custom.ValutButton
        android:id="@+id/signUpBtn"
        style="@style/BtnPrimary"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/default_android_margin"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expandableView" />


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:indeterminate="true"
        android:theme="@style/AppTheme.WhiteAccent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/signUpBtn"
        app:layout_constraintEnd_toEndOf="@+id/signUpBtn"
        app:layout_constraintStart_toStartOf="@+id/signUpBtn"
        app:layout_constraintTop_toTopOf="@+id/signUpBtn"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>