<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent">


    <TextView
        android:id="@+id/titleTv"
        style="@style/LightTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/please_come_back_later"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/successIv" />


    <TextView
        android:id="@+id/descTv"
        style="@style/LightTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:letterSpacing="0.02"
        android:padding="@dimen/default_android_margin"
        android:text="@string/wait_status_text"
        android:textColor="@color/colorTextHint"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTv" />

    <TextView
        android:id="@+id/uploadPercentTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/_40_percent_text"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/successIv"
        app:layout_constraintStart_toStartOf="@id/successIv"
        app:layout_constraintTop_toBottomOf="@id/titleTv" />


    <ImageView
        android:id="@+id/successIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:progress="100"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_wait" />


</androidx.constraintlayout.widget.ConstraintLayout>