<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/takePhotoView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/MediumTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="28dp"
            android:gravity="center_horizontal"
            android:letterSpacing="0.09"
            android:text="@string/take_a_photo"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />


        <View
            android:layout_width="match_parent"
            android:layout_height="0.53dp"
            android:layout_marginEnd="@dimen/default_android_margin"
            android:background="#D5D9E0" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fromGalleryView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/MediumTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="28dp"
            android:gravity="center_horizontal"
            android:letterSpacing="0.09"
            android:text="@string/upload_a_document_text"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />


        <View
            android:layout_width="match_parent"
            android:layout_height="0.53dp"
            android:layout_marginEnd="@dimen/default_android_margin"
            android:background="#D5D9E0" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/cancelView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/MediumTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="28dp"
            android:gravity="center_horizontal"
            android:letterSpacing="0.09"
            android:text="@string/cancle_action_text"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />

    </LinearLayout>


</LinearLayout>