<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/uploadTitleTv"
        style="@style/LightTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:gravity="center"
        android:text="@string/checking"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/descTvTv"
        style="@style/LightTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_android_margin"
        android:layout_marginEnd="@dimen/default_android_margin"
        android:gravity="center"
        android:letterSpacing="0.02"
        android:padding="@dimen/default_android_margin"
        android:text="@string/proccess_being_text"
        android:textColor="@color/colorTextHint"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uploadTitleTv" />

    <TextView
        android:id="@+id/uploadPercentTv"
        style="@style/LightTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:tag="10"
        android:text="@string/_40_percent_text"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/progressBar2"
        app:layout_constraintEnd_toEndOf="@id/progressBar2"
        app:layout_constraintStart_toStartOf="@id/progressBar2"
        app:layout_constraintTop_toTopOf="@+id/progressBar2"
        tools:text="10%"

        />


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:indeterminateDrawable="@drawable/circle_progress_drawable"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:progressBarStyleHorizontal"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:progress="100"
        android:progressDrawable="@drawable/circle_intermediate_drawable"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar3"
        style="?android:progressBarStyleHorizontal"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:progress="10"
        android:progressDrawable="@drawable/circle_primary_drawable"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>