<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:descendantFocusability="beforeDescendants"
    android:paddingBottom="@dimen/default_android_margin"
    android:focusableInTouchMode="true">


    <View
        android:id="@+id/separateLine"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/descTv"
        style="@style/LightTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:letterSpacing="0.02"
        android:lineSpacingExtra="6sp"
        android:text="@string/send_code_text"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryText"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/otpView"
        app:layout_constraintStart_toStartOf="@+id/otpView"
        app:layout_constraintTop_toBottomOf="@+id/separateLine" />


    <com.mukesh.OtpView
        android:id="@+id/otpView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="40dp"
        android:inputType="number"
        android:itemBackground="@drawable/otp_field_bg"
        android:textColor="@color/black"
        app:hideLineWhenFilled="true"
        app:itemCount="6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descTv"
        app:lineColor="@android:color/transparent"
        app:state_filled="true"
        app:viewType="line" />


    <endpass.android.endpass_sdk.presentation.custom.ValutButton
        android:id="@+id/confirmBtn"
        style="@style/BtnPrimary"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="@dimen/default_android_margin"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="@dimen/default_android_margin"
        android:layout_marginBottom="@dimen/default_android_margin"
        android:text="@string/confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resentTv" />

    <TextView
        android:id="@+id/resentTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:letterSpacing="0.09"
        android:lineSpacingExtra="2sp"
        android:padding="16dp"
        android:text="@string/resent_code"
        android:textColor="#792bef"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/otpView"
        app:layout_constraintStart_toStartOf="@+id/otpView"
        app:layout_constraintTop_toBottomOf="@+id/otpView" />

    <ProgressBar
        android:id="@+id/mProgressBar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:indeterminate="true"
        android:theme="@style/AppTheme.WhiteAccent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/confirmBtn"
        app:layout_constraintEnd_toEndOf="@+id/confirmBtn"
        app:layout_constraintStart_toStartOf="@+id/confirmBtn"
        app:layout_constraintTop_toTopOf="@+id/confirmBtn"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>