<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_android_margin"
    android:background="@color/transparent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/default_android_margin"
        app:cardCornerRadius="10dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white">


            <TextView
                android:id="@+id/titleTv"
                style="@style/LightTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_android_margin"
                android:layout_marginTop="@dimen/default_android_margin"
                android:layout_marginEnd="@dimen/default_android_margin"
                android:gravity="center"
                android:text="@string/review_permissions"
                android:textColor="@color/black"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/descTv"
                style="@style/LightTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_android_margin"
                android:layout_marginEnd="@dimen/default_android_margin"
                android:gravity="center"
                android:letterSpacing="0.02"
                android:padding="@dimen/default_android_margin"
                android:text="@string/access_info_text"
                android:textColor="@color/colorTextHint"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleTv" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="42dp"
                android:background="@drawable/bg_doc_list"
                android:padding="2dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descTv" />


            <endpass.android.endpass_sdk.presentation.custom.ValutButton
                android:id="@+id/confirmBtn"
                style="@style/BtnPrimary"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_margin="@dimen/default_android_margin"
                android:text="@string/allow"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerView"
                tools:visibility="visible" />


            <ProgressBar
                android:id="@+id/mProgressBar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:indeterminate="true"
                android:theme="@style/AppTheme.WhiteAccent"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/confirmBtn"
                app:layout_constraintEnd_toEndOf="@+id/confirmBtn"
                app:layout_constraintStart_toStartOf="@+id/confirmBtn"
                app:layout_constraintTop_toTopOf="@+id/confirmBtn"
                tools:visibility="visible" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>